# sablon-c

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: dummy
src/: main.c
src/sln/: lib.c
